<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/very_light_grey"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp">

                <ImageView
                    android:id="@+id/flag"
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/flag" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="-5dp">

                <TextView
                    android:id="@+id/country_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/india"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/capital_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/capital"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/capital"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/capital_new_delhi"
                        android:textColor="@color/dark_grey"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/region_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/region"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/region"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/region_asia"
                        android:textColor="@color/dark_grey"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sub_region_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_region"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/sub_region"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_region_southern_asia"
                        android:textColor="@color/dark_grey"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/population_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/population"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/population"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/population_1300000000"
                        android:textColor="@color/dark_grey"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/borders_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bordersHeader"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/borders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/borders"
                        android:textColor="@color/dark_grey"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/languages_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/languagesHeader"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/languages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/languages"
                        android:textColor="@color/dark_grey"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>