<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:id="@+id/flag"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/flag" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/country_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/india"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/capital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/capital_new_delhi"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/light_black"
                    android:paddingTop="5dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/region_asia"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/grey_black"
                    android:paddingTop="5dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/sub_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_region_southern_asia"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/grey_black"
                    android:paddingTop="5dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/population"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/population_1300000000"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/grey_black"
                    android:paddingTop="5dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/bordersHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bordersHeader"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/borders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/borders"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/grey_black"
                    android:paddingTop="5dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/languagesHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/languagesHeader"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/languages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/languages"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/grey_black"
                    android:paddingTop="5dp"
                    android:textSize="15sp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>